# quark-lang

./: .dockerignore  .editorconfig  .eslintrc  .gitattributes  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  package.json  tsconfig.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: docker.yml  npm-publish.yml
sample/: index.qrk
scripts/: release.js
scripts/config/: github_get.js
scripts/functions/: creating_release.js  exec.js
scripts/libs/: all.js  categorize.js  create_release.js  display_category.js  format_date.js  get_version.js  order_sort_category.js  sort_by_category.js  sort_categories.js  unemoji.js
src/: index.ts  main.rs  main.ts
src/core/: compiler.ts  interpreter.ts  lexer.rs  lexer.ts  optimizer.ts  parser.rs  parser.ts  readme.md  scanner.ts
src/core/doc/: scanner.md
src/core/tokens/: operators.ts  tokens.ts
src/interfaces/: node.ts  stack.ts  stackValue.ts  symbol.ts  token.ts  types.ts  value.ts  vm.ts
src/other/: comment.ts
src/utils/: file.rs  file.ts  json.ts  regex.rs  script.ts  string.rs
src/vm/: bytecode.ts  vm.ts
tests/: comments.spec.ts  index.spec.ts
tests/content/: comment.content.ts
