[package]
name = "quark-lang"
version = "0.0.1"
description = "Quark is a compiled programming language written in Rust. Its syntax is based on Lisp."
authors = ["NessMC <contact@nessmc.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.commands]
# Initisialising related scripts
"init" = "cargo install cargo-cmd cargo-watch"

# Execution related scripts
"start" = "cargo run"
"start:watch" = "cargo watch -x run"

# Docker related scripts
"docker" = "cargo cmd docker:build && cargo cmd docker:start"
"docker:build" = "docker build -t quark-lang ."
"docker:start" = "docker run -it --rm quark-lang"

[dependencies]
regex = "1"